--- a/frontend/index.html
+++ b/frontend/index.html
@@ -247,9 +247,15 @@ cbp-hrmenu {
 	
 	//Do main search
 	function loadPapers(title){
-		if (title === undefined || title==="") {
+		if (title === undefined || title==="") 
+		{
 			title = "";
-		}else{
+		}
+		else
+		{
+			//sanitize input
+			title = title.trim();
+			title = mysql_real_escape_string(title);
 			title="?Title="+encodeURIComponent(title);
 		}
 		$.ajax({
@@ -326,6 +332,39 @@ cbp-hrmenu {
 			}
 		});			
 	}
+	
+	function mysql_real_escape_string(str) 
+	{
+		if(typeof str != 'string')
+		{
+			return str;
+		}
+		return str.replace(/[\0\x08\x09\x1a\n\r"'\\\%]/g, function (char) 
+		{
+			switch (char) 
+			{
+				case "\0":
+					return "\\0";
+				case "\x08":
+					return "\\b";
+				case "\x09":
+					return "\\t";
+				case "\x1a":
+					return "\\z";
+				case "\n":
+					return "\\n";
+				case "\r":
+					return "\\r";
+				case "\"":
+				case "'":
+				case "\\":
+				case "%":
+					return "\\"+char; // prepends a backslash to backslash, percent,
+									// and double/single quotes
+			}
+		});
+	}
+}
 </script>
 </head>
 <body>
