Link to login page works

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -369,7 +369,7 @@ cbp-hrmenu {
 </script>
 </head>
 <body>
-	<input value="Login" id="loginButton" class="button" type="button">
+	<input value="Login" id="loginButton" class="button" type="button" onclick="window.location='login.html';">
 	      <h1 style="padding-left: 645px;">Home</h1>
 <nav id="cbp-hrmenu" class="cbp-hrmenu">
 	<ul>
