--- a/frontend/index.html
+++ b/frontend/index.html
@@ -373,10 +373,8 @@ cbp-hrmenu {
 	      <h1 style="padding-left: 645px;">Home</h1>
 <nav id="cbp-hrmenu" class="cbp-hrmenu">
 	<ul>
-		<li><a href="#">Home</a></li>
-		<li><a href="#">Research</a></li>
-		<li><a href="#">Faculty</a></li>
-		<li><a href="#">Students</a></li>
+		<li><a href="index.html">Search Database</a></li>
+		<li><a href="admin.html">Faculty Admin</a></li>
 		<!-- ... -->
 	</ul>
 </nav>
