--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Project 2</title>
+  <title>Paper Database Search</title>
 <script src='http://code.jquery.com/jquery-latest.js' type="text/javascript"></script>
 <script src='http://cdn.datatables.net/1.10.6/js/jquery.dataTables.min.js' type="text/javascript"></script>
 <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js' type="text/javascript"></script>
@@ -306,22 +306,12 @@ cbp-hrmenu {
 				var x = '<div id="infomodal" class="modal fade"><div class="modal-dialog modal-lg"><div class="modal-content"><div class="modal-header"><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button><h4 class="modal-title">Paper Information</h4></div><div class="modal-body">';
 				$.each(data,function(index,element)
 				{
-					if(index == 'Title')
-					{
-						x += '<h1>Title: ' + element + '</h1>';
-					}
-					if(index == 'Author')
-					{
-						x += '<h1>Author: ' + element + '</h1>';
-					}
-					if(index == 'Description')
-					{
-						x += '<h1>Description: ' + element + '</h1>';
-					}
-					if(index == 'Category')
-					{
-						x += '<h1>Category: ' + element + '</h1>';
-					}
+					console.log(element);
+					x += '<h1>Title: ' + element.Title + '</h1>';
+					x += '<h1>Author: ' + element.citation + '</h1>';
+					x += '<h1>Abstract: ' + element.abstract + '</h1>';
+					x += '<h1>Current Number of Collaborators: ' + element.current_people + '</h1>';
+					x += '<h1>Maximum Number of Collaborators: ' + element.max_people + '</h1>';
 				})
 				x += '</div>';
 				//Spit the modal out to the screen	  
