--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<title>Admin Panel</title>
+	<title>Faculty Admin Page</title>
 	<link rel = "stylesheet" href = "style.css" />
 </head>
 <body>
