--- a/frontend/login.html
+++ b/frontend/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<title>Login</title>
+	<title>Login Page</title>
 	<link rel = "stylesheet" href = "style.css" />
 </head>
 <body>
