Fixed Max People header

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -270,7 +270,7 @@ cbp-hrmenu {
 				//alert("hi");
 				//build options...
 				var x='<table id="mainsearch" class="display">';
-				x+='<thead><tr><th>Title</th><th>Author</th><th>Description</th><th>Current People</th><th>Maxgit config --global user.name "Your Name" People</th></tr></thead><tbody>';
+				x+='<thead><tr><th>Title</th><th>Author</th><th>Description</th><th>Current People</th><th>Max People</th></tr></thead><tbody>';
 				
 				$.each(data,function(index,element){
 					x+='<tr onclick="makeModal(' + element.paper_id + ')"><td>'+element.Title+'</td>';
