--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -307,7 +307,8 @@
 			{
 				if(document.getElementById("paperselect").childNodes[i].selected)
 				{
-					var obj = {'title': document.getElementById("title").value, 'abstract': document.getElementById("abstract").value, 'citation': document.getElementById("citation").value, 'current_people': document.getElementById("currentnum").value, 'max_people': document.getElementById("maxnum").value}
+					var obj = {'title': document.getElementById("title").value, 'abstract': document.getElementById("abstract").value, 'citation': document.getElementById("citation").value, 'current_people': document.getElementById("currentnum").value, 'max_people': document.getElementById("maxnum").value};
+					console.log(obj);
 					$.ajax({
 						type:'put',
 						url:encodeURI('http://final.alexwacker.com/ISTE330-Project/API/Paper/'+document.getElementById("paperselect").childNodes[i].getAttribute("value")),
