--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -14,6 +14,11 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.6/css/jquery.dataTables.min.css">
 	<style>
+		.paperforms
+		{
+			float: left;
+		}
+		
 		#search{
 			height:40px;
 			font-size: 15pt;
@@ -255,15 +260,22 @@
 					{
 						$.each(data,function(index,element)
 						{
+							//fill edit select menu
 							var optEle = document.createElement('option');
 							var val = element.paper_id;
 							optEle.setAttribute('value', val);
 							optEle.appendChild(document.createTextNode(element.title));
 							document.getElementById("paperselect").appendChild(optEle);
+							//fill delete select menu
+							var optEle2 = document.createElement('option');
+							var val2 = element.paper_id;
+							optEle2.setAttribute('value', val2);
+							optEle2.appendChild(document.createTextNode(element.title));
+							document.getElementById("deleteselect").appendChild(optEle2);
 						});
 						firstTime = 'false';
 					}
-					//populate form
+					//populate edit form
 					for(var i=0; i<document.getElementById("paperselect").childNodes.length; i++)
 					{
 						if(document.getElementById("paperselect").childNodes[i].selected)
@@ -327,6 +339,52 @@
 				}
 			}
 		}
+		
+		function addPaper()
+		{
+			var obj = {'title': document.getElementById("title2").value, 'abstract': document.getElementById("abstract2").value, 'citation': document.getElementById("citation2").value, 'current_people': document.getElementById("currentnum2").value, 'max_people': document.getElementById("maxnum2").value}
+			$.ajax({
+				type:'post',
+				url:'http://final.alexwacker.com/ISTE330-Project/API/Paper',
+				async:true,
+				cache:false,
+				data: obj,
+				//contentType:'application/json',
+				success:function(data)
+				{
+					
+				},
+				error:function(jqXHR, textStatus, errorThrown) 
+				{
+					//console.dir(jqXHR);
+				}
+			});
+		}
+		
+		function deletePaper()
+		{
+			for(var i=0; i<document.getElementById("deleteselect").childNodes.length; i++)
+			{
+				if(document.getElementById("deleteselect").childNodes[i].selected)
+				{
+					$.ajax({
+						type:'delete',
+						url:'http://final.alexwacker.com/ISTE330-Project/API/Paper/'+document.getElementById("deleteselect").childNodes[i].getAttribute("value"),
+						async:true,
+						cache:false,
+						//contentType:'application/json',
+						success:function(data)
+						{
+							
+						},
+						error:function(jqXHR, textStatus, errorThrown) 
+						{
+							//console.dir(jqXHR);
+						}
+					});
+				}
+			}
+		}
 	</script>
 </head>
 <body>
@@ -344,8 +402,8 @@
 		<li><a href = '#'>People</a></li>
 		<li><a href = '#'>Keywords</a></li>
 	</ul>
-<div id = "panel">
-        <form>
+	<div id = "panel">
+        <form class="paperforms">
         	<fieldset>
         		<legend>Edit Paper</legend>
 			 	<select id="paperselect" onchange="loadPapers();">
@@ -356,6 +414,25 @@
 				<label class = 'admin' for = "currentnum">Current Number of People: <input type = "text" id = "currentnum" name = "currentnum" size = "50"><br />
 				<label class = 'admin' for = "currentnum">Maximum Number of People: <input type = "text" id = "maxnum" name = "maxnum" size = "50"><br />
 				<label class = 'admin' for = "updatebutton">Update Paper: <button id="updatebutton" type="button" onclick="updatePaper();">Update</button>
+            </fieldset>
+        </form>
+		<form class="paperforms">
+        	<fieldset>
+        		<legend>Add Paper</legend>
+				<label class = 'admin' for = "title2">Paper Title: <input type = "text" id = "title2" name = "title2" size = "50"><br />
+				<label class = 'admin' for = "abstract2">Abstract: <input type = "text" id = "abstract2" name = "abstract2" size = "50"><br />
+				<label class = 'admin' for = "citation2">Citation: <input type = "text" id = "citation2" name = "citation2" size = "50"><br />
+				<label class = 'admin' for = "currentnum2">Current Number of People: <input type = "text" id = "currentnum2" name = "currentnum2" size = "50"><br />
+				<label class = 'admin' for = "currentnum2">Maximum Number of People: <input type = "text" id = "maxnum2" name = "maxnum2" size = "50"><br />
+				<label class = 'admin' for = "addbutton">Add Paper: <button id="addbutton" type="button" onclick="addPaper();">Add</button>
+            </fieldset>
+        </form>
+		<form class="paperforms">
+        	<fieldset>
+        		<legend>Delete Paper</legend>
+			 	<select id="deleteselect">
+				</select><br />
+				<label class = 'admin' for = "deletebutton">Delete Paper: <button id="deletebutton" type="button" onclick="deletePaper();">Delete</button>
             </fieldset>
         </form>
     </div>
