--- a/frontend/login.html
+++ b/frontend/login.html
@@ -4,11 +4,101 @@
 	<meta charset="utf-8" />
 	<title>Login Page</title>
 	<link rel = "stylesheet" href = "style.css" />
+	<script src='http://code.jquery.com/jquery-latest.js' type="text/javascript"></script>
+	<script src='http://cdn.jsdelivr.net/jquery.validation/1.13.1/jquery.validate.min.js' type="text/javascript"></script>
+	<script language="javascript" type="text/javascript" src="cookies.js"></script>
+	<script type="text/javascript">
+	//Function to get stored values in either cookies or local storage for form
+	function getStoredValues(which){
+	   //check if supports local storage
+	   if(window.localStorage){
+	   	if(localStorage.getItem(which)){
+	   	  	return localStorage.getItem(which);	
+	     }else{
+		  return -1;
+	     }
+	   }else{//use cookies if it doesn't
+	   	    if(GetCookie(which)!=null){
+		   	    return GetCookie(which);
+	   	    }else{
+	   	   		return -1;
+	      	}
+	   }
+	}
+	if(getStoredValues('accessHash') != -1){
+		if(document.referrer){
+			window.location.href = document.referrer;	
+		}else{
+			window.location.href="http://final.alexwacker.com/ISTE330-Project/frontend/index.html";
+		}
+	}
+	function storeValue(which,value){
+		//Checks if localstorage is supported
+		if(window.localStorage){
+			localStorage.setItem(which,value);
+		}else{
+			SetCookie(which,value);
+		}
+	}
+	//should really hash password at some point
+	function login(){
+		var username = $("#username").val();
+		var password = $("#password").val();
+		if(username == "" || password == ""){
+			password="afdafdsaf";
+		}
+		var obj = {'username':username,'password':password};
+		
+		var accessString='';
+		if(getStoredValues('accessHash') != -1){
+			accessString+='?Access='+getStoredValues('accessHash');
+		}
+		$.ajax({
+			type:'post',
+			url: 'http://final.alexwacker.com/ISTE330-Project/API/Login'+accessString,
+			async:true,
+			cache:false,
+			data: obj,
+			//contentType:'application/json',
+			success:function(data)
+			{
+				storeValue('accessHash',data.accesshash);
+				storeValue('uid',data.uid);
+				alert("Logged in");
+				window.location.href = document.referrer;
+			},
+			error:function(jqXHR, textStatus, errorThrown) 
+			{
+				//console.log(jqXHR.status);
+				if(jqXHR.status == 202){
+					window.location.href = document.referrer;
+				}
+			}
+		});
+	}
+	$(document).ready(function()
+	{
+		//initial load of papers
+		//load papers
+		$("#search").keyup(function(event)
+		{
+			//if(event.keyCode == 13){
+			loadPapers($(this).val());
+			//}
+		});
+		//form validation
+		$("#login").validate({
+			submitHandler: function(form) {
+				login();
+  			},
+		});
+	});		
+	</script>
 </head>
 <body>
 	<div id = "login-image"><img src = "login.jpg" alt = "Login Image"/></div>
 	<div id = "container">
-        <form>
+        <form id="login">
             <label class = "login" for = "username">Username:</label>
             <input type = "text" id = "username" name = "username">
             <label class = "login"for = "password">Password:</label>
