--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -5,6 +5,46 @@
 	<title>Faculty Admin Page</title>
 	<link rel = "stylesheet" href = "style.css" />
 	<script src='http://code.jquery.com/jquery-latest.js' type="text/javascript"></script>
+	<script>
+			//Function to get stored values in either cookies or local storage for form
+		function getStoredValues(which){
+		   //check if supports local storage
+		   if(window.localStorage){
+		   	if(localStorage.getItem(which)){
+		   	  	return localStorage.getItem(which);	
+		     }else{
+			  return -1;
+		     }
+		   }else{//use cookies if it doesn't
+		   	    if(GetCookie(which)!=null){
+			   	    return GetCookie(which);
+		   	    }else{
+		   	   		return -1;
+		      	}
+		   }
+		}
+		if(getStoredValues('accessHash') == -1){
+			//User is not logged in
+			window.location.href="http://final.alexwacker.com/ISTE330-Project/frontend/login.html";
+		}else{
+			//user is logged in. Verify that have the privillages to do so.
+			$.ajax({
+				type:'get',
+				url:'proxy.php',
+				async:true,
+				cache:false,
+				data:{path:'/User/'+getStoredValues('uid')},
+				dataType:'json',
+				success:function(data)
+				{
+					if(data[0].user_type_id != 1){
+						alert("You do not have acess to the admin area");
+						window.location.href="http://final.alexwacker.com/ISTE330-Project/frontend/index.html";
+					}
+				}
+			});
+		}	
+	</script>
 	<script src='http://cdn.datatables.net/1.10.6/js/jquery.dataTables.min.js' type="text/javascript"></script>
 	<script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js' type="text/javascript"></script>
 	<script src='spin.min.js' type="text/javascript"></script>
