--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,3 +1,7 @@
+<!--
+	This file contains all functionality related to logging in, such as:
+	Interacts with backend API to login user, assuming that user already has an account
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
