--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -520,9 +520,9 @@
 	</ul>
 </nav>
 	<ul id = 'navigation'>
-		<li><a id = 'papers-button' href = '#'>Papers</a></li>
-		<li><a id = 'people-button' href = '#'>People</a></li>
-		<li><a id = 'keywords-button' href = '#'>Keywords</a></li>
+		<li><p id = 'papers-button'>Papers</p></li>
+		<li><p id = 'people-button'>People</p></li>
+		<li><p id = 'keywords-button'>Keywords</p></li>
 	</ul>
 	<div id = "papers-panel">
         <form class="paperforms">
