Maybe this time I won't be dumb...maybe.

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -306,7 +306,7 @@
 			
 			loadPapers(true);
 			
-			$("a.papers-button").click(function(){
+			$("#papers-button").click(function(){
 				$("#papers-panel").html("<form class='paperforms'>"+
 					"<fieldset>"+
 						"<legend>Edit Paper</legend>"+
@@ -343,13 +343,13 @@
 				$("#keywords-panel").html("");
 			});
 			
-			$("a.people-button").click(function(){
+			$("#people-button").click(function(){
 				$("#people-panel").html("This is a test for the people tab.");
 				$("#papers-panel").html("");
 				$("#keywords-panel").html("");
 			});
 			
-			$("a.keywords-button").click(function(){
+			$("#keywords-button").click(function(){
 				$("#keywords-panel").html("This is a test for the people tab.");
 				$("#people-panel").html("");
 				$("#papers-panel").html("");
