--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -352,7 +352,7 @@
 						"</select><br />"+
 						"<label class = 'admin' for = 'firstname'>First Name: <input type = 'text' id = 'firstname' name = 'firstname' size = '50'><br />"+
 						"<label class = 'admin' for = 'lastname'>Last Name: <input type = 'text' id = 'lastname' name = 'lastname' size = '50'><br />"+
-						"<label class = 'admin' for = 'username'>Username: <input type = 'text' id = 'username' name = 'username' size = '50'><br />"+
+						"<label class = 'admin' for = 'username1'>Username: <input type = 'text' id = 'username1' name = 'username1' size = '50'><br />"+
 						"<label class = 'admin' for = 'signupdate'>Signup Date: <input type = 'text' id = 'signupdate' name = 'signupdate' size = '50'><br />"+
 						"<label class = 'admin' for = 'email'>E-mail: <input type = 'text' id = 'email' name = 'email' size = '50'><br />"+
 						"<label class = 'admin' for = 'updatebutton'>Update Person: <button id='updatebutton' type='button' onclick='updatePerson();'>Update</button>"+
@@ -366,7 +366,7 @@
 						"<label class = 'admin' for = 'username2'>Username: <input type = 'text' id = 'username2' name = 'username2' size = '50'><br />"+
 						"<label class = 'admin' for = 'signupdate2'>Signup Date: <input type = 'text' id = 'signupdate2' name = 'signupdate2' size = '50'><br />"+
 						"<label class = 'admin' for = 'email2'>E-mail: <input type = 'text' id = 'email2' name = 'email2' size = '50'><br />"+
-						"<label class = 'admin' for = 'password'>Password: <input type = 'text' id = 'password' name = 'password' size = '50'><br />"+
+						"<label class = 'admin' for = 'password1'>Password: <input type = 'text' id = 'password1' name = 'password1' size = '50'><br />"+
 						"<label class = 'admin' for = 'addbutton'>Add Person: <button id='addbutton' type='button' onclick='addPerson();'>Add</button>"+
 					"</fieldset>"+
 				"</form>"+
@@ -559,7 +559,7 @@
 	</ul>
 	
 	<div id = "papers-panel">
-        <form class="modal-formss">
+        <form class="modal-forms">
         	<fieldset>
         		<legend>Edit Paper</legend>
 			 	<select id="paperselect" onchange="loadPapers();">
