Minor addition of loadPeople(true) on load

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -305,6 +305,7 @@
 			}
 			
 			loadPapers(true);
+			loadPeople(true);
 			
 			$("#papers-button").click(function(){
 				$("#papers-panel").html("<form class='modal-forms'>"+
